<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
            android:id="@+id/meshball_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_alignParentTop="true">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/meshball_icon"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/meshball_text"/>
    </LinearLayout>

    <TextView android:id="@+id/game_over_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:text="@string/game_over"
              android:textSize="24sp"
              android:textStyle="bold"
              android:textColor="@color/solid_black" />

    <TextView android:id="@+id/game_over_subtext_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:layout_below="@id/game_over_label"
              android:text="@string/game_over_subtext"
              android:textSize="16sp"
              android:textColor="@color/solid_black" />

    <TextView android:id="@+id/game_over_shotby"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:layout_below="@id/game_over_subtext_label"
              android:layout_marginTop="10dp"
              android:text="@string/hit_message_self"
              android:textSize="16sp"
              android:textColor="@color/blue_text" />

    <Button android:id="@+id/game_over_rejoin_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:onClick="playAgainPressed"
            android:layout_margin="20dp"
            android:text="@string/game_over_playagain" />
</RelativeLayout>