<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/solid_white"
                android:gravity="fill">

    <LinearLayout
            android:id="@+id/meshball_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_alignParentTop="true">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/meshball_icon"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/meshball_text"/>
    </LinearLayout>

    <TextView
            android:id="@+id/version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meshball_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-25dp"
            android:text="@string/common_version"
            android:textColor="@color/solid_black"
            android:textSize="14sp"/>

    <Button
            android:id="@+id/howto_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/how_to"/>

    <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/update"
            android:width="100dp"/>

    <TextView
            android:id="@+id/screenname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_label"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/profile_screenname"
            android:textColor="@color/solid_black"
            android:textSize="15sp">
    </TextView>

    <EditText
            android:id="@+id/screenname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/screenname_label"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/profile_screenname_hint"
            android:inputType="textCapWords|textPersonName"
            android:singleLine="true"
            android:editable="true"
            android:textColor="@color/solid_black"
            android:textSize="15sp">
    </EditText>

    <TextView
            android:id="@+id/picture_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/screenname"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/profile_picture"
            android:textColor="@color/solid_black"/>

    <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/howto_button"
            android:layout_below="@id/picture_label"
            android:layout_marginTop="-10dp"
            android:layout_centerHorizontal="true">

        <FrameLayout
                android:id="@+id/profile_imageframe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

            <ImageView
                    android:id="@+id/profile_imageview"
                    android:background="@drawable/bordered_drawable"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top|center_horizontal"
                    android:maxHeight="300dp"
                    android:maxWidth="300dp"
                    android:src="@drawable/missing_profile"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:onClick="true"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_margin="20dp"/>
        </FrameLayout>

        <TextView
                android:id="@+id/hintLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_imageframe"
                android:layout_centerHorizontal="true"
                android:text="@string/profile_change_picture"
                android:textColor="@color/solid_black"
                android:textSize="12sp"
                android:layout_marginTop="-15dp"/>

    </RelativeLayout>

</RelativeLayout>
