<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/solid_white">

    <TextView
            android:id="@+id/confirm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/solid_black"
            android:text="@string/confirm_lbl_txt"
            android:textSize="22sp">
    </TextView>

    <ImageView
            android:id="@+id/confirm_image"
            android:background="@drawable/bordered_drawable"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_below="@id/confirm_label"
            android:layout_centerHorizontal="true"
            android:src="@drawable/missing_profile"
            android:onClick="true"
            android:focusable="true"
            android:clickable="true"
            android:layout_margin="5dp"/>

    <TextView
            android:id="@+id/confirm_hit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/confirm_image"
            android:textColor="@color/solid_black"
            android:layout_marginTop="20dp"
            android:text="@string/hit_lbl_txt"
            android:textSize="15sp">
    </TextView>

    <ImageView
            android:id="@+id/with_image"
            android:background="@drawable/bordered_drawable"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/confirm_hit_label"
            android:layout_centerHorizontal="true"
            android:src="@drawable/missing_profile"
            android:onClick="true"
            android:focusable="true"
            android:clickable="true"
            android:layout_margin="5dp"/>

    <Button android:id="@+id/confirm_hit_button"
            android:layout_width="150dp"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/with_image"
            android:layout_alignParentLeft="true"
            android:onClick="confirmHitPressed"
            android:textColor="@color/solid_black"
            android:text="@string/confirm_hit_btn" />

    <Button android:id="@+id/bad_hit_button"
            android:layout_width="150dp"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/with_image"
            android:onClick="badHitPressed"
            android:layout_alignParentRight="true"
            android:textColor="@color/solid_black"
            android:text="@string/bad_hit_btn" />

</RelativeLayout>
