<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/main_frame"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@color/solid_black">

    <FrameLayout android:id="@+id/preview_view"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"/>

    <com.samsung.meshball.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@null"/>

    <ImageView android:id="@+id/captured_imageview"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:visibility="gone"
               android:background="@null"/>

    <LinearLayout android:id="@+id/review_counter_layout"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:layout_marginRight="20dp"
                  android:layout_gravity="top|right">

        <ImageButton android:id="@+id/review_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:scaleType="fitCenter"
                     android:background="@null"
                     android:onClick="reviewPressed"
                     android:src="@drawable/meshball_icon"/>

        <TextView android:id="@+id/review_counter"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:layout_marginLeft="5dp"
                  android:textColor="@color/solid_white"
                  android:textSize="20sp"
                  android:text="@string/review_counter_txt"/>
    </LinearLayout>


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:orientation="vertical"
                  android:layout_gravity="top|center">

        <TextView android:id="@+id/score_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="top|center"
                  android:textColor="@color/solid_white"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:text="@string/score_lbl_txt"/>

        <TextView android:id="@+id/players_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="top|center"
                  android:textColor="@color/solid_white"
                  android:textSize="18sp"
                  android:text="@string/players_lbl_txt"/>

    </LinearLayout>


    <LinearLayout android:id="@+id/confirm_counter_layout"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:layout_marginLeft="10dp"
                  android:layout_gravity="top|left">

        <ImageButton android:id="@+id/confirm_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:scaleType="fitCenter"
                     android:background="@null"
                     android:onClick="confirmPressed"
                     android:src="@drawable/review_icon"/>

        <TextView android:id="@+id/confirm_counter"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:layout_marginLeft="5dp"
                  android:textColor="@color/solid_white"
                  android:textSize="20sp"
                  android:text="@string/confirm_counter_txt"/>
    </LinearLayout>

    <TextView android:id="@+id/hit_message"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="top|center"
              android:layout_marginTop="70dp"
              android:visibility="invisible"
              android:textSize="18sp"
              android:textStyle="bold"
              android:text="@string/hit_message"
              android:textColor="@color/warning_color"/>

    <ImageButton android:id="@+id/fire_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center"
                 android:layout_margin="15sp"
                 android:background="@null"
                 android:src="@drawable/fire_button"/>

</FrameLayout>

